# django-deployment

./: README.md  pyproject.toml
.github/workflows/: deploy-pr-environment.yml  test-and-build.yml
django_deployment/: settings.py  urls.py
pages/templates/: home.html
src/django_deployment/: asgi.py  settings.py  urls.py  wsgi.py
