[tool.poetry]
name = "django-deployment"
version = "0.1.0"
description = ""
authors = ["Philip Hjorth Christiansen <pch@mjolner.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
